<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:ignore="ContentDescription">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/white"
        android:src="@drawable/logo" />

    <View
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/obstbaume" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="2dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="2dp"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_bright" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="3dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:src="@drawable/map_marker" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:text="@string/Address"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="2dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:paddingLeft="20dp"
                android:src="@drawable/phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:text="@string/number"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="2dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:paddingLeft="20dp"
                android:src="@drawable/at" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:text="@string/office_obsthof_lehner_at"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="4dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:src="@drawable/earth"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:text="@string/http_www_obsthof_lehner_at"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="16dp"
                android:paddingRight="5dp"
                android:text="@string/about_us"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="3dp">

                <TextView
                    android:id="@+id/text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-light"
                    android:paddingStart="20dp"
                    android:paddingLeft="20dp"
                    android:paddingEnd="16dp"
                    android:paddingRight="10dp"
                    android:text="@string/AboutUsText"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
